--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, WEC-2023!</h1>
+    <div class="text-center">
+      <h1>Hello, WEC-2023!</h1>
+    </div>
     
+    <div class="container-sm-576px border border-danger text-center mt-5">
+      <div class="bg-danger"></div>
+        <h1>WEARNES EDUCATION CENTER</h1>
+      </div>
+    </div>
+    
+    <div class="container-fluid-sm-576px border border-primary text-center mt-4">
+      <h1>TEKNIK INFORMATIKA, ANDROID, & GAME DEVELOPER</h1>
+    </div>
+  
     <nav class="navbar navbar-expand-lg bg-dark-subtle">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Wearnes-VF</a>
