--- a/test.html
+++ b/test.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WEC-2023-VF</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="text-center">
       <h1>Hello, WEC-2023!</h1>
     </div>
     
-    <div class="container-sm 576px border border-danger text-center mt-5">
+    <div class="container-sm border border-danger text-sm-center mt-5">
       <div class="bg-danger"></div>
         <h1>WEARNES EDUCATION CENTER</h1>
       </div>
     </div>
     
-    <div class="container-fluid-sm 576px border border-primary text-center mt-4">
+    <div class="container-fluid-sm border border-primary text-sm-center mt-4">
       <h1>TEKNIK INFORMATIKA, ANDROID, & GAME DEVELOPER</h1>
     </div>
   
@@ -65,21 +65,28 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Fix & Fluid Container Bootstrap</a></li>
             <li><a class="dropdown-item" href="#">Grid Bootstrap</a></li>
-            <li><a class="dropdown-item" href="#">NavMenu Bootstrap</a></li>
-            <li><a class="dropdown-item" href="#">Tabs & Pills Bootstrap</a></li>
+            <li><a class="dropdown-item" href="web-bootstrap/nav-menu/nav-menu.html">NavMenu Bootstrap</a></li>
+            <li><a class="dropdown-item" href="web-bootstrap/tabs-and-pills/tabs-and-pills.html">Tabs & Pills Bootstrap</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">WIP A</a></li>
             <li><a class="dropdown-item" href="#">WIP B</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/test.html">Test Website</a>
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/index.html">Main Website</a>
         </li>
       </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
   </div>
   
 </nav>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
