--- a/test.html
+++ b/test.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WEC-2023-VF</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
+    <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="text-center">
@@ -24,7 +23,9 @@
   
     <nav class="navbar navbar-expand-lg bg-dark-subtle">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Wearnes-VF</a>
+    <a class="navbar-brand" href="https://www.wearneseducation.com/">
+      <img src="/images/logo/logo-wearnes.png" alt="Wearnes Logo" style="width:96px;height:64px">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -69,7 +70,7 @@
             <li><a class="dropdown-item" href="web-bootstrap/nav-menu/nav-menu.html">NavMenu Bootstrap</a></li>
             <li><a class="dropdown-item" href="web-bootstrap/tabs-and-pills/tabs-and-pills.html">Tabs & Pills Bootstrap</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">WIP A</a></li>
+            <li><a class="dropdown-item" href="/wip/wipA/wipA.html">WIP A</a></li>
             <li><a class="dropdown-item" href="#">WIP B</a></li>
           </ul>
         </li>
@@ -88,6 +89,6 @@
   </div>
   
 </nav>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
