--- a/index.html
+++ b/index.html
@@ -4,33 +4,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WEC-2023-VF</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="/images/icon/lcon-wearnes.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style-main.css">
   </head>
   <body>
-    <div class="text-center">
-      <h1>Hello, WEC-2023!</h1>
-    </div>
-    
-    <div class="container-sm 576px border border-danger text-center mt-5">
-      <div class="bg-danger"></div>
+    <div class="container-sm" style="margin-top:100px">
+      <div class="bg-primary-subtle text-body-secondary text-center">
         <h1>WEARNES EDUCATION CENTER</h1>
       </div>
     </div>
     
-    <div class="container-fluid-sm 576px border border-primary text-center mt-4">
-      <h1>TEKNIK INFORMATIKA, ANDROID, & GAME DEVELOPER</h1>
+    <div class="container-sm text-center" style="margin-top:10px">
+      <div class="bg-danger-subtle text-center text-body-secondary">
+        <h2>TEKNIK INFORMATIKA, ANDROID, & GAME DEVELOPER</h2>
+      </div>
     </div>
-  
-    <nav class="navbar navbar-expand-lg bg-dark-subtle">
+
+    <div class="container-fluid" style="margin-top:10px">
+        <h3>Hello, WEC-2023!</h3>
+        <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
+    </div>
+
+    <nav class="navbar navbar-expand-lg bg-dark-subtle fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Wearnes-VF</a>
+    <a class="navbar-brand" href="https://www.wearneseducation.com/">
+      <img src="/images/logo/logo-wearnes.png" alt="Wearnes Logo" style="width:96px;height:64px">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#Home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/VegaF-WebDev">GitHub VF</a>
@@ -65,21 +72,24 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Fix & Fluid Container Bootstrap</a></li>
             <li><a class="dropdown-item" href="#">Grid Bootstrap</a></li>
-            <li><a class="dropdown-item" href="#">NavMenu Bootstrap</a></li>
-            <li><a class="dropdown-item" href="#">Tabs & Pills Bootstrap</a></li>
+            <li><a class="dropdown-item" href="web-bootstrap/nav-menu/nav-menu.html">NavMenu Bootstrap</a></li>
+            <li><a class="dropdown-item" href="web-bootstrap/tabs-and-pills/tabs-and-pills.html">Tabs & Pills Bootstrap</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">WIP A</a></li>
-            <li><a class="dropdown-item" href="#">WIP B</a></li>
+            <li><a class="dropdown-item" href="/wip/wipA/wipA.html">WIP A (Video)</a></li>
+            <li><a class="dropdown-item" href="/wip/wipB/wipB.html">WIP B (Images)</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/test.html">Test Website</a>
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/index.html">Main Website</a>
         </li>
       </ul>
     </div>
   </div>
   
 </nav>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
