--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
   </head>
   <body>
     <div class="container-sm" style="margin-top:100px">
-      <div class="bg-primary-subtle text-body-secondary text-center">
+      <div id="judul1">
         <h1>WEARNES EDUCATION CENTER</h1>
       </div>
     </div>
-    
-    <div class="container-sm text-center" style="margin-top:10px">
-      <div class="bg-danger-subtle text-center text-body-secondary">
+    <!-- JUDUL2 -->
+    <div class="container-sm" style="margin-top:10px">
+      <div id="judul2">
         <h2>TEKNIK INFORMATIKA, ANDROID, & GAME DEVELOPER</h2>
       </div>
     </div>
-
+    <!-- JUDUL3 -->
     <div class="container-fluid" style="margin-top:10px">
-        <h3>Hello, WEC-2023!</h3>
-        <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
+      <h3 id="judul3">Hello, WEC-2023!</h3>
     </div>
-
-    <nav class="navbar navbar-expand-lg bg-dark-subtle fixed-top">
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg bg-primary-subtle fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://www.wearneseducation.com/">
       <img src="/images/logo/logo-wearnes.png" alt="Wearnes Logo" style="width:96px;height:64px">
@@ -87,8 +86,7 @@
         </li>
       </ul>
     </div>
-  </div>
-  
+  </div>  
 </nav>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
