--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">Main Website</a>
+          <a class="nav-link" href="/test.html">Test Website</a>
         </li>
       </ul>
     </div>
