--- a/test.html
+++ b/test.html
@@ -74,6 +74,9 @@
             <li><a class="dropdown-item" href="#">WIP B</a></li>
           </ul>
         </li>
+	<li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/index.html">Main Website</a>
         </li>
