--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3 id="judul3">Hello, WEC-2023!</h3>
     </div>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-primary-subtle fixed-top">
+    <nav class="navbar navbar-expand-lg bg-primary-subtle fixed-top justify-content-end">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://www.wearneseducation.com/">
       <img src="/images/logo/logo-wearnes.png" alt="Wearnes Logo" style="width:96px;height:64px">
