--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3 id="judul3">Hello, WEC-2023!</h3>
     </div>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-primary-subtle fixed-top justify-content-end">
+    <nav class="navbar navbar-expand-lg bg-primary-subtle fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://www.wearneseducation.com/">
       <img src="/images/logo/logo-wearnes.png" alt="Wearnes Logo" style="width:96px;height:64px">
@@ -33,7 +33,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#Home">Home</a>
