--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
           <a class="nav-link" href="/test.html">Test Website</a>
         </li>
       </ul>
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+        <div class="container-fluid">
+          <a class="navbar-brand justify-content-center" href="#">2023 VegaF-WebDev. All Rights Reserved</a>
+        </div>
+      </nav>
     </div>
   </div>  
 </nav>
