--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <div class="container-fluid" style="margin-top:10px">
       <h3 id="judul3">Hello, WEC-2023!</h3>
     </div>
+    <!-- JUMBOTRON1 -->
+    <div class="container mt-3">
+      <h2>Example of Jumbotron</h2>
+      <div class="mt-4 p-5 bg-primary text-white rounded">
+        <h1>Jumbotron Example</h1> 
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+      </div>
+    </div>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary-subtle fixed-top">
   <div class="container-fluid">
@@ -82,6 +90,7 @@
           <a class="nav-link" href="/test.html">Test Website</a>
         </li>
       </ul>
+      <!-- NAVBAR2 -->
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
         <div class="container-fluid">
           <a class="navbar-brand justify-content-center" href="#">2023 VegaF-WebDev. All Rights Reserved</a>
