--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- NAVBAR2 -->
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand justify-content-center" href="#">2023 VegaF-WebDev. All Rights Reserved</a>
+          <a class="navbar-brand mx-auto" href="#">2023 VegaF-WebDev. All Rights Reserved</a>
         </div>
       </nav>
     </div>
