--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <!-- NAVBAR1 -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
       <div class="container-fluid">
+        <li class="nav-item">
+          <a class="nav-link active text-white-50 ms-auto" aria-current="page" href="#Home"> <i class="fa-solid fa-house"></i> Home</a>
+        </li>
         <button class="navbar-toggler bg-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active text-white-50" aria-current="page" href="#Home"> <i class="fa-solid fa-house"></i> Home</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">WebHost</a>
               <ul class="dropdown-menu bg-dark-subtle">
@@ -109,6 +109,9 @@
             </li>
           </ul>
         </div>
+        <li class="nav-item">
+          <a class="nav-link text-white-50 me-auto">Login <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+        </li>
       </div>
     </nav>
     <!-- NAVBAR2 -->
