--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
       <div class="container-fluid">
         <li class="nav-item">
-          <a class="nav-link active text-white-50 ms-auto" aria-current="page" href="#Home"> <i class="fa-solid fa-house"></i> Home</a>
+          <a class="nav-link active text-white-50 ms-auto" aria-current="page" href="#Home"><i class="fa-solid fa-house"></i> Home</a>
         </li>
         <button class="navbar-toggler bg-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Web Bootstrap & CSS</a>
               <ul class="dropdown-menu bg-dark-subtle">
-                <li><a class="dropdown-item" href="https://carane-pinterbareng.blogspot.com/"> Materi Bootstrap 5</a></li>
+                <li><a class="dropdown-item" href="https://carane-pinterbareng.blogspot.com/search/label/Bootstrap%205"> Materi Bootstrap 5</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
                   <a class="dropdown-item" href="#">Bootstrap &raquo;</a>
