--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/style-main.css">
   </head>
   <body>
-    <section id="judul_and_jumbotron">
+    <header id="">
       <!-- JUDUL1 -->
       <div class="container-sm" style="margin-top:100px">
         <h1 id="judul1">WEARNES EDUCATION CENTER</h1>
@@ -26,24 +26,24 @@
       <div class="container-sm" style="margin-top:10px">
         <h3 id="judul3">Hello, WEC-2023!</h3>
       </div>
-    </section>
+    </header>
     <!-- NAVBAR1 -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
       <div class="container-fluid">
-        <li class="nav-item">
-          <a class="nav-link active text-white-50 ms-auto" aria-current="page" href="#Home"><i class="fa-solid fa-house"></i> Home</a>
-        </li>
         <button class="navbar-toggler bg-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <li class="navbar-nav me-auto">
+          <a class="nav-link active text-white-50" aria-current="page" href="#Home"><i class="fa-solid fa-house"></i> Home</a>
+        </li>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav central mb-auto mb-lg-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">WebHost</a>
               <ul class="dropdown-menu bg-dark-subtle">
                 <li><a class="dropdown-item" href="https://github.com/VegaF-WebDev">GitHub VF <i class="fa-brands fa-github"></i></a></li>
+                <li><a class="dropdown-item" href="https://vegaf-webdev.000webhostapp.com/">000webhosting (PHP) <i class="fa-solid fa-globe"></i></a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">WIP 000webhosting <i class="fa-solid fa-globe"></i></a></li>
                 <li><a class="dropdown-item" href="#">WIP GitLab <i class="fa-brands fa-gitlab"></i></a></li>
               </ul>
             </li>
@@ -89,7 +89,7 @@
                 <li><a class="dropdown-item" href="/wip/wipB/wipB.html">WIP B (Images, Transformation)</a></li>
                 <li><a class="dropdown-item" href="/wip/wipC/wipC.html">WIP C (Bootstrap template A)</a></li>
                 <li><a class="dropdown-item" href="/wip/wipD/index.html">WIP D (Bootstrap template B)</a></li>
-                <li><a class="dropdown-item" href="/wip/wipE/AdminLTE-3.2.0/starter.html">WIP E (AdminLTE)</a></li>
+                <li><a class="dropdown-item" href="/wip/wipE/starter.html">WIP E (AdminLTE)</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -113,10 +113,10 @@
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
           </ul>
+          <li class="navbar-nav ms-auto">
+            <a class="nav-link text-white-50" href="">Login <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+          </li>
         </div>
-        <li class="nav-item">
-          <a class="nav-link text-white-50 me-auto">Login <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
-        </li>
       </div>
     </nav>
     <!-- NAVBAR2 -->
@@ -132,7 +132,7 @@
     <section id="Jumbotron1">
       <div class="container mt-3 mt-4 p-5 bg-transparent text-black-50 rounded-5">
         <h1 id="jumbotron1judul">Halaman Utama WebDev HTML</h1> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+        <p>Nama saya Vega Febriliananda, dari Kampus Wearnes Education Center, Kelas/Jurusan IK2.</p>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
