Update index.html, style-main.css, & add login.html

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <button class="navbar-toggler bg-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <li class="navbar-nav me-auto">
-          <a class="nav-link active text-white-50" aria-current="page" href="#Home"><i class="fa-solid fa-house"></i> Home</a>
-        </li>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav central mb-auto mb-lg-auto">
+          <ul class="navbar-nav mb-auto mb-lg-auto">
+            <li class="navbar-nav me-auto">
+              <a class="nav-link active text-white-50" aria-current="page" href="#Home"><i class="fa-solid fa-house"></i> Home</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">WebHost</a>
               <ul class="dropdown-menu bg-dark-subtle">
@@ -95,7 +95,19 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PHP</a>
               <ul class="dropdown-menu bg-dark-subtle">
-                <li><a class="dropdown-item" href="#">SOAL 1A</a></li>
+                <li><a class="dropdown-item" href="https://carane-pinterbareng.blogspot.com/search/label/PHP">Materi PHP</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Variabel dan Konstanta PHP</a></li>
+                <li><a class="dropdown-item" href="#">Tipe Data PHP</a></li>
+                <li><a class="dropdown-item" href="#">Operator PHP</a></li>
+                <li><a class="dropdown-item" href="#">Fungsi Percabangan (IF dan SWITCH) PHP</a></li>
+                <li><a class="dropdown-item" href="#">Warna - warni Baris Tabel dengan IF Majemuk PHP</a></li>
+                <li><a class="dropdown-item" href="#">Fungsi Perulangan PHP</a></li>
+                <li><a class="dropdown-item" href="#">Membuat Navbar Dinamis Menggunakan Array PHP</a></li>
+                <li><a class="dropdown-item" href="#">Function dan Procedure PHP</a></li>
+                <li><a class="dropdown-item" href="#">OOP (Object Oriented Programming) PHP</a></li>
+                <li><a class="dropdown-item" href="#">Class PHP</a></li>
+                <li><a class="dropdown-item" href="#">Modularisasi PHP</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">WIP</a></li>
               </ul>
@@ -103,10 +115,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Website</a>
               <ul class="dropdown-menu bg-dark-subtle">
-                <li><a class="dropdown-item" href="/index.html">Main Website (html)</a></li>
-                <li><a class="dropdown-item" href="/index.php">Main Website (php)</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/test.php">Test Website (php)</a></li>
+                <li><a class="dropdown-item" href="/index.html">Test Website (html)</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -114,7 +123,7 @@
             </li>
           </ul>
           <li class="navbar-nav ms-auto">
-            <a class="nav-link text-white-50" href="">Login <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+            <a class="nav-link text-white-50" href="/login.html">Login <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
           </li>
         </div>
       </div>
